--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
 
 	<tr>
  
-		<th> <p class="rubiks"><img src="images/rubiks cube.JPG" width="110px" height="150px"></p> </th>
+		<th> <p class="rubiks"><img src="rubiks cube.JPG" width="110px" height="150px"></p> </th>
 
 		<th> <p class="intro"> When you are on social media can people sometimes be a little mean? 
 			Well, according to tests run through professionals, the conclusion is that people think
 			that it is okay to say mean things because they will never meet the person in real life.
 			Many of these people on social media who seem to be mean, are not.</p> </th>
 <br> </br>
-		<th> <p class="phone"><img src="images/phone.JPG" width="117px" height="150px"></p> </th>
+		<th> <p class="phone"><img src="phone.JPG" width="117px" height="150px"></p> </th>
    
    </tr>
    
    
    <tr> 
    
-		<th> <p class="quote"><img src="images/quote.jfif" width="117px" height="150px"></p> </th>
+		<th> <p class="quote"><img src="quote.jfif" width="117px" height="150px"></p> </th>
   <br> </br>
 		<th> <p class="explanation">When humans talk face to face it is common for them to give a good first impression.
 		Because people who post normally never meet their haters face to face they think that they will never have to feel guilty 
@@ -53,7 +53,7 @@
 		mean to the audition.</p> </th>
 		<br></br>
 		<th>
-		<p class="link"><a href="https://trakt.tv/shows/brainchild/seasons/1/episodes/1"/><img src="images/Capture.png" width="117" height="190">click on this image to watch the video!</a></p>
+		<p class="link"><a href="https://trakt.tv/shows/brainchild/seasons/1/episodes/1"/><img src="Capture.png" width="117" height="190">click on this image to watch the video!</a></p>
 		</th>
   <br> </br>
    </tr>
